--- a/style.css
+++ b/style.css
@@ -1,56 +1,34 @@
 #main-container {
   border: 1px black solid;
+  width: 408px;
+  height: 514px;
   margin: 0 auto;
   border-radius: 5px;
 }
 
-.number {
-  height: 100px;
+table {
+  border-collapse: collapse;
+  border-spacing: 0.5rem;
+}
+
+#calculator {
+  display: inline-block;
+}
+
+button {
   width: 100px;
+  height: 100px;
+  font-size: 50px;
+}
+
+#screen {
+  height: 95px;
+  width: 95px;
+  float: right;
+  font-size: 50px;
 }
 
 .calculate {
-  height: 100px;
-  width: 100px;
+  background-color: #EE8C25;
+  color: white;
 }
-/*
-.row {
-  border-bottom: 1px gray solid;
-  display: flex;
-  flex-direction: row;
-
-}
-
-#row-one {
-  height: 100px;
-  align-items: flex-end;
-  justify-content: flex-end;
-}
-
-input {
-  height: 60%;
-}
-
-.white-button {
-  border-right: 1px gray solid;
-  flex-grow: 1;
-  text-align: center;
-}
-
-.orange-button {
-  background-color: #FF8F00;
-  flex-grow: 1;
-  text-align: center;
-}
-
-p {
-  margin: 0 auto;
-  font-size: 40px;
-  font-family: sans-serif;
-}
-
-#zero {
-  flex-grow: 2;
-}
-
-*/
